--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -77,7 +77,7 @@
         </select>
         <input id="enable_tile_update" type="checkbox" checked onchange="draw_scene();">
         <label for="enable_tile_update">Karten tiles nachladen</label>
-        <input id="triangle_resolution" type="number" min="10" max="1000" value="600">
+        <input id="triangle_resolution" type="number" min="10" max="1000" value="400">
         <label for="triangle_resolution">Geometrieauflösung</label>
         {{/editor}}
     </div>
@@ -121,7 +121,7 @@
     let virtual_height_map = null;
     let virtual_street_map = null;
     const dist = (x1, y1, x2, y2) => {let x = x2 - x1, y = y2 - y1; return Math.sqrt(x * x + y * y);}
-    canvas3d.addEventListener("mousedown", (e) => { canvas_drag_start = { x: e.screenX, y: e.screenY, type: e.button == 0 ? "move" : e.button == 1 ? "rotate": "unknown"}; });
+    canvas3d.addEventListener("mousedown", (e) => { canvas_drag_start = { x: e.screenX, y: e.screenY, type: e.button == 0 ? "move" : e.button == 1 || e.button == 2 ? "rotate": "unknown"}; });
     canvas3d.addEventListener("touchstart", (e) => {
                               let x = e.touches.length == 1 ? e.touches[0].screenX: .5 * e.touches[0].screenX + .5 * e.touches[1].screenX;
                               let y = e.touches.length == 1 ? e.touches[0].screenY: .5 * e.touches[0].screenY + .5 * e.touches[1].screenY;
