--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -70,7 +70,8 @@
             <option base_url="tile.openstreetmap.org/" ending=".png" detail_switch_level="19">OSM</option>
             <option base_url="c.tile-cyclosm.openstreetmap.fr/cyclosm/" ending=".png" detail_switch_level="20">CyclOSM</option>
             <option base_url="server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/" swap_xy="true" detail_switch_level="22">Satellit</option>
-            <option base_url="intergeo37.bayernwolke.de/betty/g_atkis3d/" ending="" detail_switch_level="18">Straßen bayern</option>
+            <option base_url="intergeo33.bayernwolke.de/betty/atkis/" ending="" detail_switch_level="18">Straßen bayern</option>
+            <option base_url="intergeo37.bayernwolke.de/betty/g_atkis3d/" ending="" detail_switch_level="18">Straßen bayern 3d</option>
             <option base_url="intergeo31.bayernwolke.de/betty/g_satdop40_komplett/" ending="" detail_switch_level="18" col_corr_b=".85">Satellit bayern</option>
             <option base_url="intergeo37.bayernwolke.de/betty/c_hist/" ending="" detail_switch_level="14">Historisch bayern</option>
             <option base_url="intergeo36.bayernwolke.de/betty/c_dgm_relief/" ending="" detail_switch_level="14">Gelände relief</option>
@@ -120,6 +121,7 @@
     /** @type {VirtualHeightMap} */
     let virtual_height_map = null;
     let virtual_street_map = null;
+    let cur_gps_pos = null;
     const dist = (x1, y1, x2, y2) => {let x = x2 - x1, y = y2 - y1; return Math.sqrt(x * x + y * y);}
     canvas3d.addEventListener("mousedown", (e) => { canvas_drag_start = { x: e.screenX, y: e.screenY, type: e.button == 0 ? "move" : e.button == 1 || e.button == 2 ? "rotate": "unknown"}; });
     canvas3d.addEventListener("touchstart", (e) => {
@@ -290,6 +292,8 @@
             const triangle_resolution = + document.getElementById("triangle_resolution").value;
             gl.uniform1i(program.uniform_locations.tile_width, 100);
             gl.uniform1i(program.uniform_locations.geo_res, triangle_resolution);
+            if (cur_gps_pos)
+                gl.uniform2f(program.uniform_locations.cur_gps_pos_loc, cur_gps_pos.lat - grid_offset_pos.lat, cur_gps_pos.lon - grid_offset_pos.lon);
             gl.uniform2f(program.uniform_locations.tile_width_uv, base_width, 1.);
             gl.uniform2f(program.uniform_locations.grid_offset_pos, grid_offset_pos.lat, grid_offset_pos.lon);
             gl.uniform2f(program.uniform_locations.grid_offset_pos_rel, 0, 0);
@@ -433,6 +437,13 @@
             draw_scene();
         }
     }
+    function updateGpsPosition(p) {
+        let [lat, lon] = Util.wgs_84_to_uv(p.coords.latitude, p.coords.longitude);
+        cur_gps_pos = {lat: lat, lon: lon};
+        console.log("Update cur_gps_pos:");
+        console.log(p);
+        console.log(cur_gps_pos);
+    }
     // ----------------------------------------------------------------------------------------
     // init section (contains also the shader code)
     // ----------------------------------------------------------------------------------------
@@ -508,6 +519,7 @@
         uniform vec2 grid_offset_pos;
         uniform vec2 detail_corner;
         uniform vec4 color_correction;
+        uniform vec2 cur_gps_pos_loc; // gps position in local pos
         ${Util.glsl_virtual_texture_uniforms("streetmap")}
         ${Util.glsl_virtual_texture_uniforms("heightmap")}
 
@@ -563,6 +575,10 @@
             // return;
 
             // vec2 uv_glob = wgs_84_to_uv(loc_pos + pos_off);
+            if (distance(loc_pos, cur_gps_pos_loc) / gl_FragCoord.z * gl_FragCoord.w * 1e-6 < 1. / 4e7) {
+                out_col = vec4(1, 0, 0, 1);
+                return;
+            }
             vec4 surface_col = virtual_streetmap_load(grid_offset_pos, loc_pos) * color_correction;
             if (surface_col == vec4(0))
                 surface_col = vec4(.85);
@@ -618,6 +634,7 @@
                     view_proj: gl_context.getUniformLocation(pipeline, 'view_proj'),
                     detail_corner: gl_context.getUniformLocation(pipeline, 'detail_corner'),
                     color_correction: gl_context.getUniformLocation(pipeline, "color_correction"),
+                    cur_gps_pos_loc: gl_context.getUniformLocation(pipeline, 'cur_gps_pos_loc'),
                     virtual_heightmap_index: gl_context.getUniformLocation(pipeline, 'virtual_heightmap_index'),
                     virtual_heightmap_index_detail: gl_context.getUniformLocation(pipeline, 'virtual_heightmap_index_detail'),
                     virtual_heightmap: gl_context.getUniformLocation(pipeline, 'virtual_heightmap'),
@@ -657,6 +674,9 @@
         // draw_scene();
         // console.log = () => {};
         // console.info = () => {};
+        
+        if (navigator.geolocation)
+            navigator.geolocation.watchPosition(updateGpsPosition);
     }
     window.onload = init;
 
