--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -676,7 +676,7 @@
         // console.info = () => {};
         
         if (navigator.geolocation)
-            navigator.geolocation.watchPosition(updateGpsPosition);
+            navigator.geolocation.watchPosition(updateGpsPosition, ()=>{}, {enableHighAccuracy: true, timeout: 3000});
     }
     window.onload = init;
 
