Improved normal calculation by a lot.

--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -70,7 +70,7 @@
             <option base_url="tile.openstreetmap.org/" ending=".png" detail_switch_level="19">OSM</option>
             <option base_url="c.tile-cyclosm.openstreetmap.fr/cyclosm/" ending=".png" detail_switch_level="20">CyclOSM</option>
             <option base_url="server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/" swap_xy="true" detail_switch_level="22">Satellit</option>
-            <option base_url="intergeo33.bayernwolke.de/betty/atkis/" ending="" detail_switch_level="18">Straßen bayern</option>
+            <option base_url="intergeo33.bayernwolke.de/betty/atkis/" ending="" detail_switch_level="18" detail_offset="4">Straßen bayern</option>
             <option base_url="intergeo37.bayernwolke.de/betty/g_atkis3d/" ending="" detail_switch_level="18">Straßen bayern 3d</option>
             <option base_url="intergeo31.bayernwolke.de/betty/g_satdop40_komplett/" ending="" detail_switch_level="18" col_corr_b=".85">Satellit bayern</option>
             <option base_url="intergeo37.bayernwolke.de/betty/c_hist/" ending="" detail_switch_level="14">Historisch bayern</option>
