--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -610,9 +610,8 @@
             }
             vec2 dx = dFdx(loc_pos);
             vec2 dy = dFdy(loc_pos);
-            float max_del = max(dot(dx, dx), dot(dy, dy));
-            max_del = dot(dx, dx);
-            vec4 surface_col = virtual_streetmap_load(grid_offset_pos, loc_pos, get_level(max_del)) * color_correction;
+            float max_del = min(dot(dx, dx), dot(dy, dy));
+            vec4 surface_col = virtual_streetmap_load(grid_offset_pos, loc_pos, get_level(max_del * 8.)) * color_correction;
             if (surface_col == vec4(0))
                 surface_col = vec4(.85);
             vec4 d_info = virtual_heightmap_load(grid_offset_pos, loc_pos, 18.);
