--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -182,8 +182,8 @@
             line-height: 1.3;
         }
 
-        .MathJax_Preview {
-            display: contents;
+        .katex-html {
+            display: none;
         }
         
         .log_line:nth-child(even) {
@@ -192,7 +192,7 @@
     </style>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" src="{{&site_url}}/drawdown.js"></script>
-    <script type="text/javascript" id="MathJax-script" async src="{{&site_url}}/math_jax.js" onload="setup();"></script>
+    <script type="text/javascript" async src="{{&site_url}}/katex.js" onload="setup();"></script>
 </head>
 
 <body>
@@ -217,19 +217,6 @@
     const user_credentials = "{{credentials}}";
     const file_path = "{{&file_path}}";
 
-    MathJax = {
-        tex: {
-            inlineMath: [['$', '$'], ['\\(', '\\)']],
-        },
-        svg: {
-            fontCache: 'global'
-        },
-        startup: { typeset: true },
-        options: {
-            enableMenu: false,
-        }
-    };
-
     function reattach_script(script_node) {
         let new_script_node = document.createElement("script");
         new_script_node.innerHTML = script_node.innerHTML;
@@ -245,20 +232,10 @@
         let out_div = document.getElementById("preview");
         let prev_scroll = out_div.scrollTop;
         out_div.innerHTML = '';
-        out_div.innerHTML = markdown(t, MathJax.getMetricsFor(out_div));
+        out_div.innerHTML = markdown(t);
 
-        // starting to convert formulas with mathjax
-        MathJax.texReset();
-        document.querySelectorAll('math').forEach((m) => {
-            let c = m.innerHTML.trim().replaceAll("&amp;", "&");
-            m.innerHTML = '';
-            let options = MathJax.getMetricsFor(m);
-            options.display = false;
-            let node = MathJax.tex2svg(c, options);
-            m.appendChild(node);
-        });
-        MathJax.startup.document.clear();
-        MathJax.startup.document.updateDocument();
+        // starting to convert formulas with katex
+        renderMathInElement(out_div);
 
         // add table of contents (toc) if requested
         document.querySelectorAll('toc').forEach((toc_e) => {
