--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -190,6 +190,7 @@
             background-color: lightgrey;
         }
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css" integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" src="{{&site_url}}/drawdown.js"></script>
     <script type="text/javascript" async src="{{&site_url}}/katex.js" onload="setup();"></script>
