Better readme code boxes

--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -106,7 +106,7 @@
         }
 
         code {
-            background: rgba(186, 193, 208, 0.729);
+            background: rgba(186, 193, 208, 0.412);
             font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
         }
 
@@ -116,7 +116,9 @@
 
         pre>code {
             display: block;
-            padding: 0.5em 4em;
+            overflow-x: scroll;
+            border-radius: 5px;
+            padding: 0.5em 2em;
         }
 
         table {
